k8s/cluster/apps/home-automation/home-assistant/hass-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: home-assistant
  namespace: default
  labels:
    app.kubernetes.io/name: home-assistant
spec:
  ports:
  - port: 8123
    targetPort: 8123
