k8s/cluster/apps/home-automation/home-assistant/hass-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hass-ingressroute
  namespace: default
spec:
  entryPoints:                      
    - web
  routes:                           
  - kind: Rule
    match: Host(`hass.rupamarpan.io`) 
    services:                       
    - kind: Service
      name: home-assistant
      namespace: default
      port: 8123
